# python-web-practice-25

./: Makefile  Pipfile  pyproject.toml  setup.cfg
module01/lesson02/: abc_example.py  abs.py
module02/lesson01/: tes_mypy.py
module02/lesson02/mod2l2-compose/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
module03/lesson01/: 01_thread_like_function.py  02_thread_like_class.py  04_thread_lock.py  05_event_thread.py  10_basic_semaphore.py  12_barrier_thread.py  api_requests.py  result.txt
module03/lesson02/: 01_process_as_function.py  03_process__join.py  12_pool.py  14_pool_map.py  15_pipe.py  17_work_file.py  19_queue.py  fibo.py
module04/: client.py
module05/lesson01/: 02_gather.py  04_forever.py  coocking.py  fibo_async.py  io_comparition.py
module05/lesson02/: 01_aiohttp_client.py  03_get_exchange.py  server.py
module06/lesson01/: docker-compose.yml  readme.md
module06/lesson02/: alter_table.py  connection.py  create_table.py  insert_data.py  orders_example.md  select.py  update_data.py
module07/lesson01/: example_new_session.py  example_session.py
module08/lesson01/: relations.json
module08/lesson02/web25_celery/: celery_app.py  docker-compose.yaml  main.py  pyproject.toml  tasks.py
module10/django-st/: docker-compose.yaml  pyproject.toml
module10/django-st/mysite/blog/: admin.py  forms.py  models.py  urls.py  views.py
module10/django-st/mysite/blog/migrations/: 0001_initial.py  0002_post_author_post_updated_at.py
module10/django-st/mysite/blog/templates/blog/: login.html  post_detail.html  post_form.html  post_list.html
module10/django-st/mysite/mysite/: settings.py  urls.py
(+65 files in other folders)
