[tool.poetry]
name = "mod2l2-compose"
version = "0.1.0"
description = ""
authors = ["Sergey Tovstonog <s.tovstonog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
